syntax = "proto3";

package sing;

option optimize_for = SPEED;

service SingService {
    rpc SingHello (SingInput) returns (SingOutput) {
    }
}

message SingInput {
    string query = 1; // query
    sint64 page_number = 2; // 页数
    sint64 result_per_page = 3; // 每页数量

}

message SingOutput {
    string url = 1;
    string title = 2;
    repeated string snippets = 3;
    repeated SingResult results = 4;
}

message SingResult {
    string url = 1;
    string title = 2;
    repeated string snippets = 3;
}



